--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "start": "nodemon index.ts"
   },
   "dependencies": {
+    "@types/mongodb": "^3.6.17",
+    "@types/mongoose": "^5.11.97",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
+    "express-openid-connect": "^2.4.0",
     "http-errors": "~1.6.3",
-    "jade": "^0.31.2",
+    "jade": "^0.29.0",
+    "mongoose": "^5.12.13",
+    "mongoose-typescript": "^1.1.4",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
+    "jasmine": "^3.7.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
