--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "express-jwt": "^6.0.0",
+    "helmet": "^4.6.0",
+    "jwks-rsa": "^2.0.3",
+    "mongoose": "^5.12.14"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
+    "@types/express-jwt": "^0.0.42",
     "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^15.12.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
