--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "express-openid-connect": "^2.4.0",
     "helmet": "^4.6.0",
     "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.14"
